--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="./assets/styles/about.css">
 
 </head>
-  <body>
-
+  <body style="overflow: hidden;">
     <header>
       <a href="index.html" class="brand">Sri Lanka</a>
       <div class="menu-btn"></div>
@@ -26,17 +25,17 @@
           <a href="about.html">About</a>
           <a href="places.html">Places</a>
           <a href="gallery.html">Image Gallery</a>
-          <a href="contact.html">Contacts</a>
+          <a href="./blog/blog1/index.html">Blog</a>
+          <a href="con.html">Contacts</a>
         </div>
       </div>
     </header>
 
     <section class="home">
-      <video class="video-slide active" src="./assets/videos/1.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="./assets/videos/1.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="./assets/videos/1.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="./assets/videos/1.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="./assets/videos/1.mp4" autoplay muted loop></video>
+      <video class="video-slide-active" src="./assets/videos/1.mp4" autoplay muted loop></video>
+      <video class="video-slide" src="./assets/videos/vid5 (1).mp4" autoplay muted loop></video>
+      <video class="video-slide" src="./assets/videos/vid5 (2).mp4" autoplay muted loop></video>
+      
      
       <div class="content active">
         <h1>Perl of<br><span>Indian Ocean</span></h1>
